# ada-eval

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  tox.ini
ada_eval/: paths.py
ada_eval/scripts/: pack_datasets.py  unpack_datasets.py
configs/tools/: spark_assistant.json
data/base/compacted/: spark_custom.jsonl  spark_learn.jsonl
data/base/expanded/spark_custom/char_count_1/: other.json
data/base/expanded/spark_custom/char_count_1/base/: main.gpr
data/base/expanded/spark_custom/char_count_1/base/src/: string_utils.ads
data/base/expanded/spark_custom/char_count_1/solution/src/: string_utils.adb
data/base/expanded/spark_custom/char_count_2/: other.json  prompt.md
data/base/expanded/spark_custom/char_count_2/base/src/: string_utils.adb  string_utils.ads
data/base/expanded/spark_custom/char_count_2/solution/src/: string_utils.adb  string_utils.ads
data/base/expanded/spark_custom/char_count_2/tests/src/: tests.adb
data/base/expanded/spark_learn/absolute_value/: other.json  prompt.md
data/base/expanded/spark_learn/absolute_value/base/src/: integer_utils.adb
data/base/expanded/spark_learn/absolute_value/solution/src/: integer_utils.adb  integer_utils.ads
data/base/expanded/spark_learn/absolute_value/tests/src/: tests.adb
data/base/expanded/spark_learn/in_out_init/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/in_out_init/base/src/: show_permutation.adb  (+1 more)
data/base/expanded/spark_learn/ineffective_statements_1/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/ineffective_statements_2/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/ineffective_statements_2/solution/: main.gpr
data/base/expanded/spark_learn/max_array/: other.json  prompt.md
data/base/expanded/spark_learn/search_array_1/: other.json  prompt.md
data/base/expanded/spark_learn/search_array_2/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/search_array_2/tests/: tests.gpr
data/base/expanded/spark_learn/search_array_3/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/show_modularity/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/show_post_condition_violation/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/show_runtime_errors/: comments.md  other.json  prompt.md
data/base/expanded/spark_learn/show_runtime_errors/solution/: main.gpr
data/base/expanded/spark_learn/show_uninitialized/: other.json  prompt.md
data/base/expanded/spark_learn/swap_depends/: other.json  prompt.md
data/compacted/: sample.jsonl  spark.jsonl
data/evaluated/: spark_custom.jsonl  spark_learn.jsonl
data/expanded/spark/ineffective_statements/: other.json
data/expanded/spark/ineffective_statements/base/src/: show_ineffective_statements.adb  show_ineffective_statements.ads
data/expanded/spark/ineffective_statements/solution/src/: show_ineffective_statements.adb  show_ineffective_statements.ads
data/expanded/spark/ineffective_statements_1/base/src/: show_ineffective_statements.ads
data/expanded/spark/ineffective_statements_2/: other.json
scripts/: pack_datasets.py  unpack_datasets.py
src/: common_types.py  paths.py
src/ada_eval/: check_datasets.py  cli.py  common_types.py  evaluate.py  pack_datasets.py  paths.py  report.py  unpack_datasets.py  utils.py
src/ada_eval/datasets/: __init__.py  evaluate.py  generate.py  loader.py  pack_unpack.py  sample_operation.py  trivial_generations.py  utils.py
src/ada_eval/datasets/types/: __init__.py  datasets.py  directory_contents.py  evaluation_stats.py  metrics.py  sample_operation.py  samples.py
src/ada_eval/evals/: __init__.py  build.py  dummy_compiler.py  dummy_gprbuild.py  evaluate.py  factory.py  generic_eval.py  gnatprove.py  gprbuild.py  prove.py  test.py
src/ada_eval/scripts/: pack_datasets.py  unpack_datasets.py
src/ada_eval/tools/: __init__.py  factory.py  generic_tool.py  gnatprove.py  shell_script.py  spark_assistant.py  utils.py
tests/: conftest.py  helpers.py  test_check_datasets.py  test_cli.py  test_common_types.py  test_datasets.py  test_directory_contents.py  test_evals.py  test_loader.py  test_metrics.py  test_pack_datasets.py  test_pack_unpack_datasets.py  test_report.py  test_report_evaluation_results.py  test_samples.py  test_tools.py  test_unpack_datasets.py  test_unpack_generated_evaluated.py  test_utils.py
tests/data/check_test_datasets/: explain_check.jsonl  spark_check.jsonl
tests/data/eval_test_datasets/: ada_build.jsonl  spark_prove.jsonl  spark_test.jsonl
tests/data/eval_test_datasets/ada_build/correct/: other.json
tests/data/eval_test_datasets/ada_build/fails/solution/: main.gpr
tests/data/eval_test_datasets/spark_prove/not_found/: other.json
tests/data/eval_test_datasets/spark_prove/not_found/solution/: main.gpr
tests/data/eval_test_datasets/spark_prove/proves/: other.json
tests/data/report_test_datasets/: spark_report.jsonl
tests/data/valid_base_datasets/compacted/: ada_test.jsonl  explain_test.jsonl  spark_test.jsonl
tests/data/valid_base_datasets/expanded/ada_test/test_sample_0/: comments.md  other.json  prompt.md
tests/data/valid_base_datasets/expanded/explain_test/test_sample_0/: comments.md  other.json  prompt.md  reference_answer.md
tests/data/valid_base_datasets/expanded/spark_test/test_sample_0/: comments.md  other.json  prompt.md
tests/data/valid_base_datasets/expanded/spark_test/test_sample_1/: comments.md  other.json  prompt.md
tests/data/valid_base_datasets/expanded/spark_test/test_sample_2/: other.json
tests/data/valid_evaluated_datasets/compacted/: ada_test.jsonl  explain_test.jsonl  spark_test.jsonl
tests/data/valid_generated_datasets/compacted/: ada_test.jsonl  explain_test.jsonl  spark_test.jsonl
tools/: claude_code_no_mcp.sh  dummy.sh
tools/configs/: claude_code_no_mcp.json  gnatprove.json  shell_dummy.json
(+61 files in other folders)
