[project]
name = "ada-eval"
version = "0.1.0"
description = "Simple project for evaluating LLM based tools for Ada"
readme = "README.md"
authors = [{ name = "Rowan Walshe", email = "walshe@adacore.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy-gitlab-code-quality>=1.1.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.1",
    "ipykernel>=6.29.5",
    "types-tqdm>=4.67.0.20250516",
]

[project.scripts]
ada-eval = "ada_eval.cli:main"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "FIX",   # flake8-fixme
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # Perflint
    "RUF",   # ruff
]

ignore = [
    "COM812",  # Recommended by ruff as it can conflict with the formatter
    "D100",    # public-module
    "D101",    # public-class
    "D102",    # public-method
    "D103",    # public-function
    "D104",    # public-package
    "D105",    # magic-method
    "D106",    # public-nested-class
    "D107",    # public-init
    "D202",    # no-blank-line-after-function
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "S607",    # start-process-with-partial-path
    "PLC1901", # compare-to-empty-string,
    "S603",    # subprocess-without-shell-equals-true
    "T201",    # use-assert-in-tests
    "TD002",   # Disable TODO warnings for now
    "TD003",   # Disable TODO warnings for now
    "TD004",   # Disable TODO warnings for now
    "FIX002",  # Disable fixme warnings for now
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow asserts
    "PLR2004", # Allow magic value comparison (e.g. `assert len(x) == 3`)
    "PLR0915", # Allow more than 50 statements (for long tests with lots of asserts)
    "TRY003",  # Allow long messages outside of exception class (for mock exceptions)
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=ada_eval --cov-report=term-missing --cov-branch"
testpaths = ["tests"]

[tool.coverage.report]
precision = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = "."
plugins = "pydantic.mypy"
strict = true
warn_unreachable = true
python_version = "3.12"
disable_error_code = ["no-untyped-def"]
